# easy_markers

./: .pre-commit-config.yaml  package.xml  setup.cfg  setup.py
easy_markers/: generator.py  interactive.py
