<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>easy_markers</name>
  <version>0.0.0</version>
  <description>Python library to assist in publishing markers easily</description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD</license>
  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>std_msgs</depend>
  <depend>tf_transformations</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
